# etlegacy

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  .ignore  .travis.yml  AndroidManifest.xml  Brewfile  CHANGELOG.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  COPYING.txt  Dockerfile  Doxyfile  Info.plist  Makefile  Makefile.aros  README.md  README.txt  SECURITY.md  TODO  VERSION.txt  appveyor.yml  build.gradle  desktop.ini  diff.diff  easybuild.bat  easybuild.sh  etl.keystore  etlkey.jks  glsl2c.sed  gradle.properties  makebundle.sh  pixi.toml  premake4.lua  release.bat  release.sh  settings.gradle  (+2 more)
.github/: ISSUE_TEMPLATE
.github/workflows/: android-build-machine.yml  build-pr.yml  build.yml  ci.yml  codeql-analysis.yml  coverity-scan.yml  lnx-aarch64-build-machine.yml  lnx-build-machine.yml  snapcraft.yml
.signpath/artifact-configurations/: default.xml
.tx/: config
app/: build.gradle
app/cpp/: eventqueue.h  q3e.c  q3e_android.h
app/jni/: Android.mk  Application.mk  CMakeLists.txt  eventqueue.cpp  q3e.c  q3e.h
cmake/: Build.cmake  CPack.STGZ_Header.sh.in  CPackOptions.cmake.in  ETLAssembly.cmake  ETLBanner.cmake  ETLBuildClient.cmake  ETLBuildLuaSQL.cmake  ETLBuildMod.cmake  ETLBuildModFileDeletionDetector.cmake.in  ETLBuildPack.cmake  ETLBuildRenderer.cmake  ETLBuildServer.cmake  ETLBundledLibs.cmake  ETLCPack.cmake  ETLCommon.cmake  ETLCrossCompile32.cmake  ETLFunctions.cmake  ETLInstall.cmake  ETLInstallGeoIP.cmake  ETLInstallLuaSQL.cmake  ETLInstallOmniBot.cmake  ETLInstallWolfAdmin.cmake  ETLPlatform.cmake  ETLPrograms.cmake  ETLQ3eloader.cmake  ETLSetupFeatures.cmake  ETLSourceGroup.cmake  ETLSources.cmake  ETLTargets.cmake  ETLVersion.cmake  FindGLES.cmake  FindGLES2.cmake  FindGLEW.cmake  FindJPEGTURBO.cmake  FindLua.cmake  FindLuaJIT.cmake  FindMiniZip.cmake  FindSDL2.cmake  FindSDL32.cmake  FindSQLite3.cmake  (+18 more)
cmake/modules/: FindVorbis.cmake
docs/: INSTALL.txt  assets.md  events.md  replacing-stock-shaders.md  upgrade-sdl3.rst
docs/demos/: README-serverside-demos.md  README-serverside-demos_ETL.md
docs/game/: anticheat.html
etmain/: clean.cfg  clean_cubes.cfg  clean_full.cfg  clean_simple.cfg  default.cfg  default_android.cfg  default_left.cfg  default_pandora.cfg  etlegacy.cfg  etlegacy_download.cfg  gameinfo.txt  preset_android.cfg  preset_android_ui.cfg  preset_fast.cfg  preset_fast_ui.cfg  preset_fastest.cfg  preset_fastest_ui.cfg  preset_high.cfg  preset_high_r2.cfg  preset_high_ui.cfg  preset_normal.cfg  preset_normal_ui.cfg
etmain/animations/: human_base.anim  human_base_2_82_1.anim
etmain/changelogs/: 1.0.changelog  1.01.changelog  1.02.changelog  2.60.changelog  2.60b_d.changelog  2.70.changelog  2.70_2.changelog  2.70_3.changelog  2.70_4.changelog  2.70_5.changelog  2.70_6.changelog  2.70_7.changelog  2.71.changelog  2.71_2.changelog  2.71_3.changelog  2.71_4.changelog  2.71a.changelog  2.72.changelog  2.73.changelog  2.74.changelog  2.75.changelog  2.76.changelog  2.77.1.changelog  2.77.changelog  2.78.1.changelog  2.78.changelog  2.79.0.changelog  2.80.0.changelog  2.80.1.changelog  2.80.2.changelog  2.81.0.changelog  2.81.1.changelog  2.82.0.changelog  2.82.1.changelog  2.83.0.changelog  2.83.1.changelog  2.83.2.changelog  2.84.changelog
etmain/configs/: defaultcomp.config  defaultpublic.config  legacy1.config  legacy3.config  legacy5.config  legacy6.config
etmain/fonts/: ETL_readme.txt  Read me.txt  Readme.txt
etmain/glsl/: depthFill_fp.glsl  depthFill_vp.glsl  fogQuake3_vp.glsl  forwardLighting_fp.glsl  generic_fp.glsl  generic_vp.glsl  geometricFill_fp.glsl  lightMapping_fp.glsl  liquid_fp.glsl  reflection_CB_fp.glsl  reflection_C_fp.glsl  reflection_C_vp.glsl  refraction_C_vp.glsl  toneMapping_fp.glsl  vertexLighting_DBS_entity_fp.glsl
etmain/icons/: iconw_MP40.tga  iconw_akimbocolts.tga  iconw_akimbocolts_1_select.tga  iconw_akimbolugers.tga  iconw_akimbolugers_1_select.tga  iconw_ammopack.tga  iconw_bazooka.tga  iconw_bazooka_1_select.tga  iconw_binoculars.tga  iconw_browning.tga  iconw_colt.tga  iconw_colt_1_select.tga  iconw_dynamite.tga  iconw_fg42.tga  iconw_flamethrower.tga  iconw_grenade.tga  iconw_kar98.tga  iconw_kar98_gren.tga  iconw_knife.tga  iconw_knife_kbar.tga  iconw_knife_kbar_1_select.tga  iconw_landmine.tga  iconw_landmine_1_select.tga  iconw_luger.tga  iconw_luger_1_select.tga  iconw_m1_garand.tga  iconw_m1_garand_gren.tga  iconw_mauser.tga  iconw_medheal.tga  iconw_mg42.tga  iconw_mortar.tga  iconw_mortar_ax.tga  iconw_mortar_ax_1_select.tga  iconw_mp34.tga  iconw_mp34_1_select.tga  iconw_panzerfaust.tga  iconw_pineapple.tga  iconw_pineapple_1_select.tga  iconw_pliers.tga  iconw_radio.tga  (+14 more)
etmain/lights/: round.tga  skyline1.tga  squarelight.tga  squarelight1.tga  squarelight1a.tga  squarelight1b.tga
etmain/locale/: etlegacy_client.pot  etlegacy_mod.pot
etmain/maps/: battery.objdata  battery.script  battery_lms.objdata  battery_lms.script  fueldump.objdata  fueldump.script  fueldump_lms.objdata  oasis.objdata  (+16 more)
jni/: Application.mk
locale/: cs.po  etlegacy_mod.pot
misc/: ETL.xpm  INSTALL.txt  Info.plist  autoformat.py  check-changes.py  check-pr.sh  clang-padding-report.py  clang-regenerate-luals-definitions.py  collect-and-check-gh-build-logs.py  com.etlegacy.ETLegacy.aarch64.desktop  com.etlegacy.ETLegacy.desktop  com.etlegacy.ETLegacy.desktop.in  com.etlegacy.ETLegacy.metainfo.xml  com.etlegacy.ETLegacy.metainfo.xml.in  com.etlegacy.ETLegacy.x86.desktop  com.etlegacy.ETLegacy.x86_64.desktop  coverity-modelling.c  description.txt  dl-pak0.sh  etl.ai  etl.icns  etl_bot.sh  etl_bot.sh.in  etl_bot_x86.sh  etl_bot_x86_64.sh  etl_definitions.lua  etl_lib.py  etl_renderer2.sh  etlded_bot.sh  etlded_bot.sh.in  etlded_bot_x86.sh  etlded_bot_x86_64.sh  etlegacy-x86.service  etlegacy-x86_64.service  etlegacy.conf  etlegacy.desktop  etlegacy.service  etlegacy.service.in  etlegacy.sh  etlegacy.xml  (+14 more)
src/: SConscript.bspc  SConscript.cgame  SConscript.core  SConscript.curl  SConscript.game  SConscript.ui  SConstruct  SConstruct.sdk  scons_utils.py  wolf.sln  wolf.vcproj
(+2691 files in other folders)
